<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.studentplanner.Monday">

    <item
        android:id="@+id/editCourses"
        android:title="@string/edit_courses"
        android:orderInCategory="10"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_name_edit_courses"/>
    <item
        android:id="@+id/reset"
        android:title="@string/reset_timetable"
        android:orderInCategory="20"
        app:showAsAction="never"/>
    <item
        android:id="@+id/turnOff"
        android:title="@string/turn_off_alarm"
        android:orderInCategory="20"
        app:showAsAction="never"
        android:checkable="true"/>
</menu>