<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DaysActivity"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <Button
        android:id="@+id/mon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/monday"
        android:textSize="24sp"
        android:textStyle="bold"
        android:onClick="monWork"/>

    <Button
        android:id="@+id/tue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/tuesday"
        android:textSize="24sp"
        android:textStyle="bold"
        android:onClick="tueWork"/>

    <Button
        android:id="@+id/wed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/wednesday"
        android:textSize="24sp"
        android:textStyle="bold"
        android:onClick="wedWork"/>

    <Button
        android:id="@+id/thur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/thursday"
        android:textSize="24sp"
        android:textStyle="bold"
        android:onClick="thurWork"/>

    <Button
        android:id="@+id/fri"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/friday"
        android:textSize="24sp"
        android:textStyle="bold"
        android:onClick="friWork"/>

</LinearLayout>