<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:onClick="close"
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:src="@drawable/ic_arrow_back_black_24dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat"
                android:text="@string/app_name"
                android:textSize="16sp" />
        </LinearLayout>
    </android.support.v7.widget.Toolbar>


    <Button
        android:id="@+id/mon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:background="@drawable/button_background"
        android:fontFamily="@font/montserrat"
        android:gravity="center_vertical|center_horizontal"
        android:onClick="monWork"
        android:text="@string/monday"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/tue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:background="@drawable/button_background"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:onClick="tueWork"
        android:text="@string/tuesday"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/wed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:background="@drawable/button_background"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:onClick="wedWork"
        android:text="@string/wednesday"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/thur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:background="@drawable/button_background"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:onClick="thurWork"
        android:text="@string/thursday"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/fri"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:background="@drawable/button_background"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:onClick="friWork"
        android:text="@string/friday"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

</LinearLayout>