<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <EditText
            android:fontFamily="@font/montserrat"
            android:id="@+id/new_course"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:ems="10"
            android:hint="@string/add_course"
            android:inputType="textPersonName" />

        <ImageButton
            android:id="@+id/add_course"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="?attr/selectableItemBackground"
            android:src="@drawable/ic_add_circle_outline_black_24dp"
            android:text="@string/add" />
    </LinearLayout>

    <ListView
        android:id="@+id/course_list"
        android:layout_width="wrap_content"
        android:layout_height="200dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_margin="8dp"
            android:id="@+id/save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:fontFamily="@font/montserrat"
            android:text="@string/save"
            android:textColor="@color/white" />

        <Button
            android:layout_margin="8dp"
            android:fontFamily="@font/montserrat"
            android:textColor="@color/white"
            android:background="@drawable/button_background"
            android:id="@+id/clear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/clear_all" />

    </LinearLayout>


</LinearLayout>